# mini_vvvf_panel

./: CMakeLists.txt  README.md
.github/workflows/: actions.yml
libs/qtcoro/: CMakeLists.txt  QCoroHandleWrapper.cpp  QCoroHandleWrapper.hpp  qtcoro.hpp
src/: BLEPickerDialog.cpp  BLEPickerDialog.hpp  BLEPickerDialog.ui  BLEWrapper.cpp  BLEWrapper.hpp  Tab1.cpp  Tab1.hpp  Tab1.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  vfd_ctl.cpp  vfd_ctl.hpp
